--- a/gamingspots.html
+++ b/gamingspots.html
@@ -54,10 +54,8 @@
                 <div class="intro">
                     <div class="content"> 
                         <center>
-                            <p>&nbsp; &nbsp; &nbsp; Luckily, the city is filled with places where you can take your gaming into the real world, where you can use it as a retreat once you run out of things to talk about, where you can use your gaming prowess as a flirting tool (I mean, probably not, but maybe).</p>
-                        </center>
-                        <center>
-                            <p>Here are the best places to play video games in NYC while retaining your humanity.</p>
+                            <p>&nbsp; &nbsp; &nbsp; Luckily, the city have some places where you can take your gaming outside into the real world, where you can use it as a retreat from all the monotony, and where you can use your gaming prowess as a to impress your significant other (probably not, but maybe).</p>
+                            <p>Here are the best places to play video games in NYC while you socialize.</p>
                         </center>                         
                     </div>                     
                 </div>                 
