--- a/gamingspots.html
+++ b/gamingspots.html
@@ -94,7 +94,7 @@
             <div class="border">
                 <p><bold>
                         <center>
-                            ________________________________________
+                            <img src="images/whiteborder.png" alt="title">
 </center>
                     </bold></p>
             </div>
@@ -131,7 +131,8 @@
             </div>
             <div class="border">
                 <p><bold>
-                        <center>               ________________________________________  
+                        <center>
+                            <img src="images/whiteborder.png" alt="title">
 </center>
                     </bold></p>
             </div>
@@ -168,7 +169,8 @@
             </div>
             <div class="border">
                 <p><bold>
-                        <center>               ________________________________________  
+                        <center>
+                            <img src="images/whiteborder.png" alt="title">  
 </center>
                     </bold></p>
             </div>             
@@ -207,7 +209,8 @@
             </div>
             <div class="border">
                 <p><bold>
-                        <center>               ________________________________________  
+                        <center>
+                            <img src="images/whiteborder.png" alt="title"> 
 </center>
                     </bold></p>
             </div>
@@ -244,7 +247,8 @@
             </div>
             <div class="border">
                 <p><bold>
-                        <center>               ________________________________________  
+                        <center>
+                            <img src="images/whiteborder.png" alt="title">
 </center>
                     </bold></p>
             </div>
@@ -281,7 +285,8 @@
             </div>
             <div class="border">
                 <p><bold>
-                        <center>               ________________________________________  
+                        <center>
+                            <img src="images/whiteborder.png" alt="title">
 </center>
                     </bold></p>
             </div>
@@ -318,7 +323,8 @@
             </div>             
             <div class="border">
                 <p><bold>
-                        <center>               ________________________________________  
+                        <center>
+                            <img src="images/whiteborder.png" alt="title">_  
 </center>
                     </bold></p>
             </div>
@@ -355,7 +361,8 @@
             </div>             
             <div class="border">
                 <p><bold>
-                        <center>               ________________________________________  
+                        <center>
+                            <img src="images/whiteborder.png" alt="title"> 
 </center>
                     </bold></p>
             </div>
