--- a/gamingspots.html
+++ b/gamingspots.html
@@ -324,7 +324,7 @@
             <div class="border">
                 <p><bold>
                         <center>
-                            <img src="images/whiteborder.png" alt="title">_  
+                            <img src="images/whiteborder.png" alt="title">  
 </center>
                     </bold></p>
             </div>
