--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 			        
 	
     <div id="main">
-			<body> 
+			 
         <div class="img"> 
             <img src="images/title-crop.png" alt="title"> 
         </div>         
@@ -74,6 +74,7 @@
                 <figcaption class="credit"> 
                     <a class="credit__link" href="https://patch.com/new-jersey/newarknj/take-peek-inside-newark-s-barcade-photos" target="_blank"> Barcade NJ/Patch.com </a> 
                 </figcaption>
+                </header>
                 <div class="intro">
                     <div class="content"> 
                         <center>
