--- a/gamingspots.html
+++ b/gamingspots.html
@@ -56,7 +56,7 @@
 			<li><a href="index.html">Home</a></li>
 			<li><a onclick="abcd(one); return false;" href="#">Articles</a>
 			<ul class="dropdown">
-					<li><a href="gamingspots.html">Best Places for Arcade</a></li>
+					<li><a href="gamingspots.html">Arcade Places</a></li>
 					<li><a href="#">java traning</a></li>
 					<li><a href="#">php traning</a></li>
 					<li><a href="#">mysql traning</a></li>
