--- a/about.html
+++ b/about.html
@@ -58,8 +58,8 @@
 			<ul class="dropdown">
 					<li><a href="gamingspots.html">Arcade Places</a></li>
 					<li><a href="gamingmaking.html">Gaming Design</a></li>
-					<li><a href="#">php traning</a></li>
-					<li><a href="#">mysql traning</a></li>
+					<li><a href="gamedevmeetup.html">Gaming Devs</a></li>
+					<li><a href="gameplaymeetup.html">Gaming Events</a></li>
 				</ul>
 			</li>
             
