--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 			<ul class="dropdown">
 					<li><a href="gamingspots.html">Arcade Places</a></li>
 					<li><a href="gamingmaking.html">Gaming Design</a></li>
-					<li><a href="#">php traning</a></li>
-					<li><a href="#">mysql traning</a></li>
+					<li><a href="gamedevmeetup.html">Gaming Devs</a></li>
+					<li><a href="gameplaymeetup.html">Gaming Events</a></li>
 				</ul>
 			</li>
             
@@ -92,7 +92,7 @@
                     <div class="img">
                       <img src="images/600_467meetup.png" alt="arcade machine">
                     </div>
-                    <h2 class="title">The Best Socializing Places to Play Video Games in NYC</h2>
+                      <h2 class="title"><a href="gamingspots.html">The Best Socializing Places to Play Video Games in NYC</a></h2>
                     <div class="content">
                       <p>Luckily, the city have some places where you can take your gaming outside into the real world, where you can use it as a retreat from all the monotony.</p>
                     </div>
@@ -109,7 +109,7 @@
                     <div class="img">
                       <img src="images/the_games_forum.jpg" alt="classroom teachings">
                     </div>
-                    <h2 class="title">Learn How to Make Video Games in NYC</h2>
+                      <h2 class="title"><a href="gamingmaking.html">Learn How to Make Video Games in NYC</a></h2>
                     <div class="content">
                       <p>New York continues to be one of the best places for aspiring game designers to learn their craft, with a decent offering of a variety of quality game design schools.</p>
                     </div>
@@ -124,15 +124,15 @@
                 <div id="container_192b9a7">
                   <div id="container_192b9a7_padding">
                     <div class="img">
-                      <img src="http://placehold.it/250x250" alt="Placeholder">
+                      <img src="images/gamedev.jpg" alt="Gamers Expo">
                     </div>
-                    <h2 class="title">This is my title</h2>
+                      <h2 class="title"><a href="gamedevmeetup.html">Gaming Developers Meetups Here in NYC</a></h2>
                     <div class="content">
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vehicula vitae ligula sit amet maximus. Nunc auctor neque ipsum, ac porttitor elit lobortis ac. Vivamus ultrices sodales tellus et aliquam. Pellentesque porta sit amet
                         nulla vitae luctus. Praesent quis risus id dolor venenatis condimentum.</p>
                     </div>
                     <div class="footer">
-                      An optional footer goes here.
+                      &nbsp;
                     </div>
                   </div>
                 </div>
@@ -142,15 +142,15 @@
                 <div id="container_62709428">
                   <div id="container_62709428_padding">
                     <div class="img">
-                      <img src="http://placehold.it/250x250" alt="Placeholder">
+                      <img src="images/gameplay.jpg" alt="Local Gaming event">
                     </div>
-                    <h2 class="title">This is my title</h2>
+                      <h2 class="title"><a href="gameplaymeetup.html">Video Game Players Meetup Events in NYC</a></h2>
                     <div class="content">
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vehicula vitae ligula sit amet maximus. Nunc auctor neque ipsum, ac porttitor elit lobortis ac. Vivamus ultrices sodales tellus et aliquam. Pellentesque porta sit amet
                         nulla vitae luctus. Praesent quis risus id dolor venenatis condimentum.</p>
                     </div>
                     <div class="footer">
-                      An optional footer goes here.
+                      &nbsp;
                     </div>
                   </div>
                 </div>
