--- a/index.html
+++ b/index.html
@@ -128,8 +128,7 @@
                     </div>
                       <h2 class="title"><a href="gamedevmeetup.html">Gaming Developers Meetups Here in NYC</a></h2>
                     <div class="content">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vehicula vitae ligula sit amet maximus. Nunc auctor neque ipsum, ac porttitor elit lobortis ac. Vivamus ultrices sodales tellus et aliquam. Pellentesque porta sit amet
-                        nulla vitae luctus. Praesent quis risus id dolor venenatis condimentum.</p>
+                      <p>Working on a game? Join with other game developers, artists, designers, producers, and general creatives coming together to discuss the technical and creative challenges in making a video game.</p>
                     </div>
                     <div class="footer">
                       &nbsp;
@@ -146,8 +145,7 @@
                     </div>
                       <h2 class="title"><a href="gameplaymeetup.html">Video Game Players Meetup Events in NYC</a></h2>
                     <div class="content">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vehicula vitae ligula sit amet maximus. Nunc auctor neque ipsum, ac porttitor elit lobortis ac. Vivamus ultrices sodales tellus et aliquam. Pellentesque porta sit amet
-                        nulla vitae luctus. Praesent quis risus id dolor venenatis condimentum.</p>
+                      <p>Is just going to your local arcade bar still not enough to quench your gaming thirst? Then how about joining a meetup group or two... or three?</p>
                     </div>
                     <div class="footer">
                       &nbsp;
